conversão de fuso horário na hora de cadastrar uma rotina
